--- a/resources/forms/contact_form.yaml
+++ b/resources/forms/contact_form.yaml
@@ -3,7 +3,7 @@ honeypot: webs1te
 email:
   -
     id: lv2hk7hm
-    to: m@marceli.to
+    to: mieten@apleona.com
     from: no-reply@adlerstrasse-basel.ch
     reply_to: no-reply@adlerstrasse-basel.ch
     subject: 'Kontaktformular adlerstrasse-basel.ch'
